Add location update functionality
